Fix horizontal overflow for glossary lookup (#445)
* Fix Overflow for Labs Glossary

* Add story to glossary lookup and report labs observation

--- a/frontend/src/app/components/glossary-lookup/glossary-lookup.component.scss
+++ b/frontend/src/app/components/glossary-lookup/glossary-lookup.component.scss
@@ -2,4 +2,5 @@
   max-height:300px;
   overflow-y:scroll;
   display: inline-block;
+  max-width: 100%;
 }
